Fix invisible stamps in firefox

--- a/client/src/app/toolbar/tool-option/tool-option.component.scss
+++ b/client/src/app/toolbar/tool-option/tool-option.component.scss
@@ -47,5 +47,11 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
 
+.stamp {
+  width: auto;
+  height: 40px;
+  padding: 10px 10px 10px 0;
+  cursor: pointer;
 }
